--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <h2 class="heading">My <span>Certifications</span></h2>
     <div class="certification-container">
       <div class="portfolio-box">
-        <img src="C:\Users\MOHAMMAD SAJJAD\Desktop\HMS\gemini\portfolio\sure_trust_certificate.png"alt="Data Science Certificate" />
+        <img src="C:\Users\MOHAMMAD SAJJAD\Desktop\HMS\gemini\portfolio\sure.png"alt="Data Science Certificate" />
         <div class="portfolio-content">
           <h4>Data Science & Data Analysis</h4>
           <p>Issued by AICTE</p>
@@ -128,7 +128,7 @@
       </div>
 
       <div class="portfolio-box">
-        <img src="C:\Users\MOHAMMAD SAJJAD\Desktop\HMS\gemini\portfolio\screenshot-2025-07-01.png" alt="AI ML Certificate" />
+        <img src="C:\Users\MOHAMMAD SAJJAD\Desktop\HMS\gemini\portfolio\apsche.png" alt="AI ML Certificate" />
         <div class="portfolio-content">
           <h4>Artificial Intelligence & Machine Learning</h4>
           <p>Issued by APSCHE</p>
