--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
   <!-- 📬 CONTACT -->
   <section class="contact" id="contact">
     <h2 class="heading">Contact <span>Me!</span></h2>
-    <form action="#">
+    <form action="https://formsubmit.co/mohammedsameeralishaik@email.com" method="POST">
       <div class="input-box">
         <input type="text" placeholder="Full Name" />
         <input type="email" placeholder="Your Email" />
