--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me!</span></h2>
       <form
-        action="https://formsubmit.co/mohammedsameeralishaik@email.com"
+        action="https://formsubmit.co/mohammedsameeralishaik@gmail.com"
         method="POST"
       >
         <!-- 🛡️ Optional hidden fields -->
