--- a/index.html
+++ b/index.html
@@ -1,145 +1,198 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>SHAIK MOHAMMED SAMEER ALI - Portfolio</title>
-  <link rel="stylesheet" href="style.optimized.css" />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-    rel="stylesheet"
-  />
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-  />
-</head>
-<body>
-  <!-- 🌐 HEADER -->
-  <header class="header">
-    
-    <i class="fas fa-bars" id="menu-icon"></i> <!-- 👈 Mobile icon -->
-    <nav class="navbar">
-      <a href="#home" class="active">About</a>
-      <a href="#skills">Skills</a>
-      <a href="#experience">Experience</a>
-      <a href="#portfolio">Projects</a>
-      <a href="#certification">Certification</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SHAIK MOHAMMED SAMEER ALI - Portfolio</title>
+    <link rel="stylesheet" href="style.optimized.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+  </head>
+  <body>
+    <!-- 🌐 HEADER -->
+    <header class="header">
+      <i class="fas fa-bars" id="menu-icon"></i>
+      <!-- 👈 Mobile icon -->
+      <nav class="navbar">
+        <a href="#home" class="active">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#experience">Experience</a>
+        <a href="#portfolio">Projects</a>
+        <a href="#certification">Certification</a>
+        <a href="#contact">Contact</a>
+      </nav>
+    </header>
 
-  <!-- 🏠 HOME -->
-  <section class="home" id="home">
-    <div class="home-content">
-      <h3>Hello, It's Me</h3>
-      <h1>SHAIK MOHAMMED SAMEER ALI</h1>
-      <h3>And I'm a <span class="multiple-text">Data Analyst</span></h3>
-      <p>
-        Data Analyst with hands-on experience in SQL, Python, and Data
-        Visualization. Passionate about transforming complex datasets into
-        actionable insights.
-      </p>
-      <div class="social-media">
-        <a href="https://www.linkedin.com/in/shaik-mohammedsameerali-672a82251/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
-        <a href="https://github.com/sure-trust/Sameer-G9_DS" target="_blank"><i class="fab fa-github"></i></a>
+    <!-- 🏠 HOME -->
+    <section class="home" id="home">
+      <div class="home-content">
+        <h3>Hello, It's Me</h3>
+        <h1>SHAIK MOHAMMED SAMEER ALI</h1>
+        <h3>And I'm a <span class="multiple-text">Data Analyst</span></h3>
+        <p>
+          Data Analyst with hands-on experience in SQL, Python, and Data
+          Visualization. Passionate about transforming complex datasets into
+          actionable insights.
+        </p>
+        <div class="social-media">
+          <a
+            href="https://www.linkedin.com/in/shaik-mohammedsameerali-672a82251/"
+            target="_blank"
+            ><i class="fab fa-linkedin-in"></i
+          ></a>
+          <a href="https://github.com/sure-trust/Sameer-G9_DS" target="_blank"
+            ><i class="fab fa-github"></i
+          ></a>
+        </div>
+        <a
+          href="https://docs.google.com/document/d/1LB9uSAcdDstgJWPxN1rUc18CNW2zWacH/edit?usp=sharing"
+          class="btn"
+          target="_blank"
+          >Download CV</a
+        >
       </div>
-      <a href="https://docs.google.com/document/d/1LB9uSAcdDstgJWPxN1rUc18CNW2zWacH/edit?usp=sharing" class="btn" target="_blank">Download CV</a>
-    </div>
-    <div class="home-img">
-      <img src="IMG-20230130-WA0011.png" alt="Sameer Profile" />
-    </div>
-  </section>
+      <div class="home-img">
+        <img src="IMG-20230130-WA0011.png" alt="Sameer Profile" />
+      </div>
+    </section>
 
-  <!-- 💻 SKILLS -->
-  <section class="skills" id="skills">
-    <h2 class="heading">My <span>Skills</span></h2>
-    <div class="skills-container">
-      <div class="skills-box">
-        <i class="fas fa-code"></i>
-        <h3>Programming</h3>
-        <p>Python, SQL, Java, C</p>
-      </div>
-      <div class="skills-box">
-        <i class="fas fa-chart-bar"></i>
-        <h3>Data Science Tools</h3>
-        <p>NumPy, Pandas, Scikit-learn, Power BI, Tableau</p>
-      </div>
-      <div class="skills-box">
-        <i class="fas fa-brain"></i>
-        <h3>Techniques</h3>
-        <p>Predictive Modelling, K-Means Clustering, Model Evaluation</p>
-      </div>
-    </div>
-  </section>
-
-  <!-- 🧠 EXPERIENCE -->
-  <section class="experience" id="experience">
-    <h2 class="heading">Work <span>Experience</span></h2>
-    <div class="experience-container">
-      <div class="experience-box">
-        <h3>Data Science & Data Analysis Training Program</h3>
-        <h4>Sure Trust | Jan 2024 - May 2024</h4>
-        <ul>
-          <li>Completed hands-on training in data analytics, visualization, and predictive modelling.</li>
-          <li>Developed interactive dashboards using Tableau.</li>
-          <li>Gained practical experience in data cleaning & transformation.</li>
-        </ul>
-        <a href="https://drive.google.com/file/d/1AtAZ6drofhWPEZpMbqu9_7qMEZ76isES/view?usp=sharing" target="_blank" class="btn">View Certificate</a>
-      </div>
-    </div>
-  </section>
-
-  <!-- 📦 PORTFOLIO -->
-  <section class="portfolio" id="portfolio">
-    <h2 class="heading">Latest <span>Project</span></h2>
-    <div class="portfolio-container">
-      <div class="portfolio-box">
-        <img src="generate image of 3d.png" alt="Project 1" />
-        <div class="portfolio-content">
-          <h4>Hospital Management System (Mini Project)</h4>
-          <p>Developed a basic hospital system using Python with CRUD and automation.</p>
-          <a href="https://github.com/sure-trust/Sameer-G9_DS/blob/main/Mini%20Projects/Hospital_Management_System.ipynb" target="_blank" class="btn">View Project</a>
+    <!-- 💻 SKILLS -->
+    <section class="skills" id="skills">
+      <h2 class="heading">My <span>Skills</span></h2>
+      <div class="skills-container">
+        <div class="skills-box">
+          <i class="fas fa-code"></i>
+          <h3>Programming</h3>
+          <p>Python, SQL, Java, C</p>
+        </div>
+        <div class="skills-box">
+          <i class="fas fa-chart-bar"></i>
+          <h3>Data Science Tools</h3>
+          <p>NumPy, Pandas, Scikit-learn, Power BI, Tableau</p>
+        </div>
+        <div class="skills-box">
+          <i class="fas fa-brain"></i>
+          <h3>Techniques</h3>
+          <p>Predictive Modelling, K-Means Clustering, Model Evaluation</p>
         </div>
       </div>
+    </section>
 
-      <div class="portfolio-box">
-        <img src="different design sty.png" alt="Project 2" />
-        <div class="portfolio-content">
-          <h4>Customer Segmentation for E-commerce</h4>
-          <p>Applied K-means clustering to identify customer types & improve marketing.</p>
-          <a href="https://github.com/sure-trust/Sameer-G9_DS/blob/main/Final%20Capstone%20Project/Customer_Segmentation_Project.ipynb" target="_blank" class="btn">View Project</a>
+    <!-- 🧠 EXPERIENCE -->
+    <section class="experience" id="experience">
+      <h2 class="heading">Work <span>Experience</span></h2>
+      <div class="experience-container">
+        <div class="experience-box">
+          <h3>Data Science & Data Analysis Training Program</h3>
+          <h4>Sure Trust | Jan 2024 - May 2024</h4>
+          <ul>
+            <li>
+              Completed hands-on training in data analytics, visualization, and
+              predictive modelling.
+            </li>
+            <li>Developed interactive dashboards using Tableau.</li>
+            <li>
+              Gained practical experience in data cleaning & transformation.
+            </li>
+          </ul>
+          <a
+            href="https://drive.google.com/file/d/1AtAZ6drofhWPEZpMbqu9_7qMEZ76isES/view?usp=sharing"
+            target="_blank"
+            class="btn"
+            >View Certificate</a
+          >
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- 🎓 CERTIFICATION -->
-  <section class="certification" id="certification">
-    <h2 class="heading">My <span>Certifications</span></h2>
-    <div class="certification-container">
-      <div class="portfolio-box">
-        <img src="sure.png"alt="Data Science Certificate" />
-        <div class="portfolio-content">
-          <h4>Data Science & Data Analysis</h4>
-          <p>Issued by AICTE</p>
-          <a href="https://drive.google.com/file/d/1AtAZ6drofhWPEZpMbqu9_7qMEZ76isES/view?usp=sharing" class="btn" target="_blank">View Certificate</a>
+    <!-- 📦 PORTFOLIO -->
+    <section class="portfolio" id="portfolio">
+      <h2 class="heading">Latest <span>Project</span></h2>
+      <div class="portfolio-container">
+        <div class="portfolio-box">
+          <img src="generate image of 3d.png" alt="Project 1" />
+          <div class="portfolio-content">
+            <h4>Hospital Management System (Mini Project)</h4>
+            <p>
+              Developed a basic hospital system using Python with CRUD and
+              automation.
+            </p>
+            <a
+              href="https://github.com/sure-trust/Sameer-G9_DS/blob/main/Mini%20Projects/Hospital_Management_System.ipynb"
+              target="_blank"
+              class="btn"
+              >View Project</a
+            >
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img src="different design sty.png" alt="Project 2" />
+          <div class="portfolio-content">
+            <h4>Customer Segmentation for E-commerce</h4>
+            <p>
+              Applied K-means clustering to identify customer types & improve
+              marketing.
+            </p>
+            <a
+              href="https://github.com/sure-trust/Sameer-G9_DS/blob/main/Final%20Capstone%20Project/Customer_Segmentation_Project.ipynb"
+              target="_blank"
+              class="btn"
+              >View Project</a
+            >
+          </div>
         </div>
       </div>
+    </section>
 
-      <div class="portfolio-box">
-        <img src="apsche.png" alt="AI ML Certificate" />
-        <div class="portfolio-content">
-          <h4>Artificial Intelligence & Machine Learning</h4>
-          <p>Issued by APSCHE</p>
-          <a href="https://drive.google.com/file/d/1p9pXhl_eSbNclhVE_UagXtXnsGD2ZKfg/view" class="btn" target="_blank">View Certificate</a>
+    <!-- 🎓 CERTIFICATION -->
+    <section class="certification" id="certification">
+      <h2 class="heading">My <span>Certifications</span></h2>
+      <div class="certification-container">
+        <div class="portfolio-box">
+          <img
+            src="C:\Users\MOHAMMAD SAJJAD\Desktop\HMS\gemini\portfolio\sure.png"
+            alt="Data Science Certificate"
+          />
+          <div class="portfolio-content">
+            <h4>Data Science & Data Analysis</h4>
+            <p>Issued by AICTE</p>
+            <a
+              href="https://drive.google.com/file/d/1AtAZ6drofhWPEZpMbqu9_7qMEZ76isES/view?usp=sharing"
+              class="btn"
+              target="_blank"
+              >View Certificate</a
+            >
+          </div>
+        </div>
+
+        <div class="portfolio-box">
+          <img
+            src="C:\Users\MOHAMMAD SAJJAD\Desktop\HMS\gemini\portfolio\apsche.png"
+            alt="AI ML Certificate"
+          />
+          <div class="portfolio-content">
+            <h4>Artificial Intelligence & Machine Learning</h4>
+            <p>Issued by APSCHE</p>
+            <a
+              href="https://drive.google.com/file/d/1p9pXhl_eSbNclhVE_UagXtXnsGD2ZKfg/view"
+              class="btn"
+              target="_blank"
+              >View Certificate</a
+            >
+          </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
 
-  <!-- 📬 CONTACT -->
-      <section class="contact" id="contact">
+    <!-- 📬 CONTACT -->
+    <section class="contact" id="contact">
       <h2 class="heading">Contact <span>Me!</span></h2>
       <form
         action="https://formsubmit.co/mohammedsameeralishaik@gmail.com"
@@ -147,11 +200,6 @@
       >
         <!-- 🛡️ Optional hidden fields -->
         <input type="hidden" name="_captcha" value="false" />
-        <input
-          type="hidden"
-          name="_next"
-          value="https://yourdomain.com/thankyou.html"
-        />
 
         <div class="input-box">
           <input type="text" name="name" placeholder="Full Name" required />
@@ -176,19 +224,19 @@
       </form>
     </section>
 
-  <!-- 🔚 FOOTER -->
-  <footer class="footer">
-    <div class="footer-text">
-      <p>Copyright &copy; 2025 by Sameer | All Rights Reserved.</p>
-    </div>
-    <div class="footer-iconTop">
-      <a href="#home"><i class="fas fa-arrow-up"></i></a>
-    </div>
-  </footer>
+    <!-- 🔚 FOOTER -->
+    <footer class="footer">
+      <div class="footer-text">
+        <p>Copyright &copy; 2025 by Sameer | All Rights Reserved.</p>
+      </div>
+      <div class="footer-iconTop">
+        <a href="#home"><i class="fas fa-arrow-up"></i></a>
+      </div>
+    </footer>
 
-  <!-- 📜 SCRIPTS -->
-  <script src="https://unpkg.com/scrollreveal"></script>
-  <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
-  <script src="script.js"></script>
-</body>
+    <!-- 📜 SCRIPTS -->
+    <script src="https://unpkg.com/scrollreveal"></script>
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
