--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
       <div class="certification-container">
         <div class="portfolio-box">
           <img
-            src="C:\Users\MOHAMMAD SAJJAD\Desktop\HMS\gemini\portfolio\sure.png"
+            src="sure.png"
             alt="Data Science Certificate"
           />
           <div class="portfolio-content">
@@ -174,7 +174,7 @@
 
         <div class="portfolio-box">
           <img
-            src="C:\Users\MOHAMMAD SAJJAD\Desktop\HMS\gemini\portfolio\apsche.png"
+            src="apsche.png"
             alt="AI ML Certificate"
           />
           <div class="portfolio-content">
